conformance/tests/httproute-response-header-modifier-backend.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: response-header-modifier
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /set
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: ResponseHeaderModifier
        responseHeaderModifier:
          set:
          - name: X-Header-Set
            value: set-overwrites-values
  - matches:
    - path:
        type: PathPrefix
        value: /add
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: ResponseHeaderModifier
        responseHeaderModifier:
          add:
          - name: X-Header-Add
            value: add-appends-values
  - matches:
    - path:
        type: PathPrefix
        value: /remove
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: ResponseHeaderModifier
        responseHeaderModifier:
          remove:
          - X-Header-Remove
  - matches:
    - path:
        type: PathPrefix
        value: /multiple
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: ResponseHeaderModifier
        responseHeaderModifier:
          set:
          - name: X-Header-Set-1
            value: header-set-1
          - name: X-Header-Set-2
            value: header-set-2
          add:
          - name: X-Header-Add-1
            value: header-add-1
          - name: X-Header-Add-2
            value: header-add-2
          - name: X-Header-Add-3
            value: header-add-3
          remove:
          - X-Header-Remove-1
          - X-Header-Remove-2
  - matches:
    - path:
        type: PathPrefix
        value: /case-insensitivity
    backendRefs:
    - name: infra-backend-v1
      port: 8080
      filters:
      - type: ResponseHeaderModifier
        responseHeaderModifier:
          set:
          - name: X-Header-Set
            value: header-set
          add:
          - name: X-Header-Add
            value: header-add
          - name: x-lowercase-add
            value: lowercase-add
          - name: x-Mixedcase-ADD-1
            value: mixedcase-add-1
          - name: X-mixeDcase-add-2
            value: mixedcase-add-2
          - name: X-UPPERCASE-ADD
            value: uppercase-add
          remove:
          - X-Header-Remove
